--- a/src/index.html
+++ b/src/index.html
@@ -362,75 +362,117 @@
                 <!-- /.row -->
             </div>
             <!-- /.container-fluid -->
-        </section>
+        </section>        
 
         <section class="testimonial">
-            <div class="container">
-                <div class="row">
-                    <div class="title-block">
-                        <h2 class="title">Lorem ipsum</h2>
-                        <h3 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="title-block">
+                            <h2 class="title">Lorem ipsum</h2>
+                            <h3 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+                        </div>
+                        <!-- /.title-block -->
                     </div>
-                    <!-- /.title-block -->
+                    <!-- /.row -->
+                    <div class="owl-carousel owl-theme">
+                        <div class="row justify-content-md-center">
+                            <div class="col-12 col-md-2">
+                                <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
+                                <h4>John Doe</h4>
+                            </div>
+                            <!-- /.col -->
+                            <div class="col-12 col-md-6">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facere ab quae quod ipsa voluptatibus adipisci amet quia,
+                                    dolore maxime nostrum ea similique, accusamus, autem eum nihil. Repellat, perferendis ea.
+                                </p>
+                            </div>
+                            <!-- /.col -->
+                        </div>
+                        <!-- /.row -->
+                        <div class="row justify-content-md-center">
+                            <div class="col-12 col-md-2">
+                                <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
+                                <h4>John Doe</h4>
+                            </div>
+                            <!-- /.col -->
+                            <div class="col-12 col-md-6">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facere ab quae quod ipsa voluptatibus adipisci amet quia.
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit consectetur quia numquam quae distinctio odio asperiores
+                                    nam accusantium officia omnis nesciunt, ipsum explicabo reprehenderit dolor atque, architecto, ratione libero laboriosam!
+                                </p>
+                            </div>
+                            <!-- /.col -->
+                        </div>
+                        <!-- /.row -->
+                        <div class="row justify-content-md-center">
+                            <div class="col-12 col-md-2">
+                                <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
+                                <h4>John Doe</h4>
+                            </div>
+                            <!-- /.col -->
+                            <div class="col-12 col-md-6">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facere ab quae quod ipsa voluptatibus adipisci amet quia,
+                                    dolore maxime nostrum ea similique, accusamus, autem eum nihil. Repellat, perferendis ea. Lorem
+                                    ipsum dolor sit amet consectetur adipisicing elit. Nihil neque praesentium quis dolor nesciunt
+                                    obcaecati officia voluptate earum repudiandae architecto unde vitae non consequatur harum, asperiores
+                                    aperiam ex facere ab.
+                                </p>
+                            </div>
+                            <!-- /.col -->
+                        </div>
+                        <!-- /.row -->
+                    </div>
+                    <!-- /.owl-carousel -->                
+                </div>
+                <!-- /.container -->
+        </section>
+
+        <section class="video" data-parallax="scroll" data-image-src="./img/man-ipad.jpg">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="title-block">
+                            <h2 class="title">Lorem ipsum</h2>
+                            <h3 class="subtitle">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
+                            </h3>
+                        </div>
+                        <!-- /.title-block -->
+                        <button type="button" class="btn-video" data-toggle="modal"  data-target="#videoModal">
+                            <i class="fa fa-play fa-4x"></i>
+                        </button>                        
+                    </div>
+                    <!-- /.col -->
                 </div>
                 <!-- /.row -->
-                <div class="owl-carousel owl-theme">
-                    <div class="row justify-content-md-center">
-                        <div class="col-12 col-md-2">
-                            <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
-                            <h4>John Doe</h4>
-                        </div>
-                        <!-- /.col -->
-                        <div class="col-12 col-md-6">
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facere ab quae quod ipsa voluptatibus adipisci amet quia,
-                                dolore maxime nostrum ea similique, accusamus, autem eum nihil. Repellat, perferendis ea.
-                            </p>
-                        </div>
-                        <!-- /.col -->
-                    </div>
-                    <!-- /.row -->
-                    <div class="row justify-content-md-center">
-                        <div class="col-12 col-md-2">
-                            <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
-                            <h4>John Doe</h4>
-                        </div>
-                        <!-- /.col -->
-                        <div class="col-12 col-md-6">
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facere ab quae quod ipsa voluptatibus adipisci amet quia.
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit consectetur quia numquam quae distinctio odio asperiores
-                                nam accusantium officia omnis nesciunt, ipsum explicabo reprehenderit dolor atque, architecto, ratione libero laboriosam!
-                            </p>
-                        </div>
-                        <!-- /.col -->
-                    </div>
-                    <!-- /.row -->
-                    <div class="row justify-content-md-center">
-                        <div class="col-12 col-md-2">
-                            <img class="img-fluid img-thumbnail rounded-circle mx-auto" src="img/john-doe.jpg" alt="Client">
-                            <h4>John Doe</h4>
-                        </div>
-                        <!-- /.col -->
-                        <div class="col-12 col-md-6">
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facere ab quae quod ipsa voluptatibus adipisci amet quia,
-                                dolore maxime nostrum ea similique, accusamus, autem eum nihil. Repellat, perferendis ea. Lorem
-                                ipsum dolor sit amet consectetur adipisicing elit. Nihil neque praesentium quis dolor nesciunt
-                                obcaecati officia voluptate earum repudiandae architecto unde vitae non consequatur harum, asperiores
-                                aperiam ex facere ab.
-                            </p>
-                        </div>
-                        <!-- /.col -->
-                    </div>
-                    <!-- /.row -->
-                </div>
-                <!-- /.owl-carousel -->                
             </div>
             <!-- /.container -->
+
+            <!-- Modal -->
+            <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <!-- 16:9 aspect ratio -->
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe src="https://www.youtube.com/embed/XSGBVzeBUbk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <section class="blog"></section>
+
+        <section class="map"></section>
 
         <section class="calltoaction"></section>
 
