--- a/src/index.html
+++ b/src/index.html
@@ -573,7 +573,13 @@
         
         </section>
 
-        <section class="map"></section>
+        <section class="map">
+            <div class="container-fluid">
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
 
         <section class="calltoaction"></section>
 
