--- a/src/index.html
+++ b/src/index.html
@@ -573,13 +573,7 @@
         
         </section>
 
-        <section class="map">
-            <div class="container-fluid">
-                <div class="map">
-                    <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
-            </div>
-        </section>
+        <section id="map"></section>
 
         <section class="calltoaction"></section>
 
@@ -622,11 +616,15 @@
     <!-- Owl Corousel -->
     <script src="vendor/owl.carousel/owl.carousel.min.js"></script>
 
+    <!-- Google Maps -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoJb7uMM3w86emIiQwJkakVCl3g8MqkBY"></script>
+
     <!-- Inline Java-Scripts -->
     <script inline src="js/smoothscroll-config.js"></script>
     <script inline src="js/counterup-config.js"></script>
     <script inline src="js/ekko-lightbox-config.js"></script>
-    <script inline src="js/owl-carousel-config.js"></script>
+    <script inline src="js/owl-carousel-config.js"></script>    
+    <script inline src="js/google-maps-config.js"></script> 
 </body>
 
 </html>
