New Call To Action Section, buttons style moved to base.sass and mixins organized

--- a/src/index.html
+++ b/src/index.html
@@ -51,14 +51,14 @@
             <div class="row">                
                 <div class="col-12">
                     <div class="row">
-                        <a href="#" class="btn btn-cover-primary d-block mx-auto">Lorem ipsum dolor</a>
+                        <a href="#" class="btn btn-primary d-block mx-auto my-4">Lorem ipsum dolor</a>
                     </div>
                     <!-- /.row -->
                 </div>
                 <!-- /.col -->
                 <div class="col-12">
                     <div class="row">
-                        <a href="#" class="btn btn-cover-secondary d-block mx-auto">Lorem ipsum</a>
+                        <a href="#" class="btn btn-outline-light d-block mx-auto mb-5">Lorem ipsum</a>
                     </div>
                     <!-- /.row -->
                 </div>
@@ -102,7 +102,7 @@
                                 autem modi nobis, doloremque officiis? Dolorum alias natus autem! Aliquid commodi delectus laboriosam
                                 nostrum?
                             </p>
-                            <a class="btn btn-news-primary" href="#">Lorem ipsum</a>
+                            <a class="btn btn-outline-light" href="#">Lorem ipsum</a>
                         </div>
                         <!-- /.col -->
                     </div>
@@ -575,7 +575,19 @@
 
         <section id="map"></section>
 
-        <section class="calltoaction"></section>
+        <section class="calltoaction">
+            <div class="d-sm-flex p-4 justify-content-center align-items-center">
+                <div class="d-sm-flex flex-sm-row">
+                    <div class="d-sm-flex flex-sm-column mx-2">
+                        <h2 class="text-left">Lorem ipsum dolor sit amet</h2>
+                        <p class="text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem harum rerum perferendis asperiores maiores aut eius blanditiis.</p>
+                    </div>
+                    <div class="d-sm-flex flex-sm-column mx-2">
+                        <button type="button" class="btn btn-outline-light btn-block">Lorem ipsum dolor!</button>
+                    </div>                    
+                </div>
+            </div>
+        </section>
 
         <section class="fag"></section>
 
