--- a/src/index.html
+++ b/src/index.html
@@ -589,7 +589,88 @@
             </div>
         </section>
 
-        <section class="fag"></section>
+        <section class="faq">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="title-block">
+                            <h2 class="title color-primary">Lorem ipsum</h2>
+                            <h3 class="subtitle">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
+                            </h3>
+                        </div>
+                        <!-- /.title-block -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div id="accordion">
+                            <div class="card">
+                                <div class="card-header" id="headingOne">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link btn-block" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            Lorem ipsum dolor sit amet?
+                                        </button>
+                                    </h5>
+                                </div>
+                    
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                                    <div class="card-body">
+                                        <p class="text-justify">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quis nam distinctio necessitatibus enim expedita ratione non eligendi saepe ut voluptates cupiditate mollitia, quod aliquid tempore quo odit nisi possimus?
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, qui nam distinctio magnam cupiditate, error officiis molestiae incidunt facilis repudiandae perferendis est quam amet tempora omnis tempore sed, mollitia esse.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum placeat cum ea odio, rerum ad itaque animi quas recusandae officia optio. Amet, ipsum. Eaque, iusto minima sunt et ut aut.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header" id="headingTwo">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link btn-block collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                Lorem ipsum dolor sit amet?
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                                    <div class="card-body">
+                                        <p class="text-justify">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam enim soluta minus quia consequuntur necessitatibus accusamus unde rerum, esse consectetur, delectus suscipit omnis nisi, eius corporis at reprehenderit? A, autem!
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, doloribus debitis iure quaerat dolorum porro dolore magni possimus, facilis voluptatibus aut, reiciendis iusto! Expedita tempora laborum, officiis illum quidem et?
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita voluptas nihil saepe debitis itaque tenetur vel aliquam sit, harum sunt libero illo corporis, explicabo non praesentium reprehenderit, eos voluptatem nesciunt.
+                                        </p>    
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header" id="headingThree">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link btn-block collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                Lorem ipsum dolor sit amet?
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                                    <div class="card-body">
+                                        <p class="text-justify">
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci quibusdam at nostrum quos officia praesentium similique eaque nisi veniam aspernatur possimus unde quae animi quam, fugiat cumque recusandae obcaecati illum.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel pariatur aperiam modi aliquam veniam facere cum dolorum molestiae illum repellat doloribus, velit distinctio, maiores commodi optio a ipsum corporis exercitationem?
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet nam ipsum quos qui neque. Fugit architecto ab quae repellat. Cumque eveniet quos at eum possimus error laboriosam iste sunt veniam.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 pt-4 pt-sm-0">
+                        <img class="img-fluid" src="img/iPhone.png" alt="iPhone Img">
+                    </div>
+                </div>
+            </div>
+            
+        </section>
 
         <section class="contact"></section>
 
