--- a/src/index.html
+++ b/src/index.html
@@ -615,7 +615,7 @@
                                         </button>
                                     </h5>
                                 </div>
-                    
+                                <!-- /.card-header -->                    
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                                     <div class="card-body">
                                         <p class="text-justify">
@@ -624,8 +624,11 @@
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum placeat cum ea odio, rerum ad itaque animi quas recusandae officia optio. Amet, ipsum. Eaque, iusto minima sunt et ut aut.
                                         </p>
                                     </div>
+                                    <!-- /.card-body -->
                                 </div>
+                                <!-- /.collapse -->
                             </div>
+                            <!-- /.card -->
                             <div class="card">
                                 <div class="card-header" id="headingTwo">
                                     <h5 class="mb-0">
@@ -634,6 +637,7 @@
                                         </button>
                                     </h5>
                                 </div>
+                                <!-- /.card-header --> 
                                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                                     <div class="card-body">
                                         <p class="text-justify">
@@ -642,8 +646,11 @@
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita voluptas nihil saepe debitis itaque tenetur vel aliquam sit, harum sunt libero illo corporis, explicabo non praesentium reprehenderit, eos voluptatem nesciunt.
                                         </p>    
                                     </div>
+                                    <!-- /.card-body -->
                                 </div>
+                                <!-- /.collapse -->
                             </div>
+                            <!-- /.card -->
                             <div class="card">
                                 <div class="card-header" id="headingThree">
                                     <h5 class="mb-0">
@@ -652,6 +659,7 @@
                                         </button>
                                     </h5>
                                 </div>
+                                <!-- /.card-header --> 
                                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                                     <div class="card-body">
                                         <p class="text-justify">
@@ -660,16 +668,23 @@
                                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet nam ipsum quos qui neque. Fugit architecto ab quae repellat. Cumque eveniet quos at eum possimus error laboriosam iste sunt veniam.
                                         </p>
                                     </div>
+                                    <!-- /.card-body -->
                                 </div>
+                                <!-- /.collapse -->
                             </div>
+                            <!-- /.card -->
                         </div>
+                        <!-- /#accordion -->
                     </div>
+                    <!-- /.col -->
                     <div class="col-sm-6 pt-4 pt-sm-0">
                         <img class="img-fluid" src="img/iPhone.png" alt="iPhone Img">
                     </div>
+                    <!-- /.col -->
                 </div>
+                <!-- /.row -->
             </div>
-            
+            <!-- /.container -->
         </section>
 
         <section class="contact"></section>
