--- a/src/index.html
+++ b/src/index.html
@@ -605,7 +605,7 @@
                 </div>
                 <!-- /.row -->
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-lg-6">
                         <div id="accordion">
                             <div class="card">
                                 <div class="card-header" id="headingOne">
@@ -677,7 +677,7 @@
                         <!-- /#accordion -->
                     </div>
                     <!-- /.col -->
-                    <div class="col-sm-6 pt-4 pt-sm-0">
+                    <div class="col-lg-6 pt-4 pt-lg-0">
                         <img class="img-fluid" src="img/iPhone.png" alt="iPhone Img">
                     </div>
                     <!-- /.col -->
@@ -687,7 +687,77 @@
             <!-- /.container -->
         </section>
 
-        <section class="contact"></section>
+        <section class="contact" data-parallax="scroll" data-image-src="./img/email-computer.jpg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="title-block">
+                            <h2 class="title">Lorem ipsum</h2>
+                            <h3 class="subtitle">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
+                            </h3>
+                        </div>
+                        <!-- /.title-block -->
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+                <div class="row">
+                    <div class="col-lg-8">
+                        <form action="#">
+                            <div class="form-group">
+                                <input class="form-control" name="name" id="name" placeholder="Your Name">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" type="email" name="subject" id="email" placeholder="Your E-Mail">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" name="subject" id="subject" placeholder="The Subject">
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control" name="message" id="message" rows="10" placeholder="Your Message"></textarea>
+                            </div>
+                            <button class="btn btn-outline-light btn-block">Submit</button>
+                        </form>
+                    </div>
+                    <!-- /.col -->
+                    <div class="col-lg-4 pt-4 pt-lg-0">
+                        <ul class="list-unstyled contact-info">
+                            <li>
+                                <p class="font-weight-bold">
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;&nbsp;Av. Lorem ipsum dolor sit amet, 321 - São Paulo / Brazil
+                                </p>
+                            </li>
+                            <li>
+                                <p class="font-weight-bold">
+                                    <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp;
+                                    <a href="tel:551144445555">551144445555</a>
+                                </p>
+                            </li>                            
+                        </ul>
+                        <p class="social">
+                            <a href="#" class="external facebook">
+                                <i class="fa fa-facebook"></i>
+                            </a>
+                            <a href="#" class="external gplus">
+                                <i class="fa fa-google-plus"></i>
+                            </a>
+                            <a href="#" class="external twitter">
+                                <i class="fa fa-twitter"></i>
+                            </a>
+                            <a href="#" title="" class="external instagram">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                            <a href="#" class="email">
+                                <i class="fa fa-envelope"> </i>
+                            </a>
+                        </p>
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+            </div>
+        </section>
 
         <section class="newsletter"></section>
     </main>
