newsletter subscription, footer and some bugs fix

--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
         </section>
 
         <section class="services">
-            <div class="container text-center">
+            <div class="container text-center pb-5">
                 <div class="row">
                     <div class="col-12">
                         <div class="title-block">
@@ -151,7 +151,7 @@
         </section>
 
         <section class="features">
-            <div class="container">
+            <div class="container pb-5">
                 <div class="col-12">
                     <div class="row">
                         <div class="feature">
@@ -206,7 +206,7 @@
         </section>
 
         <section class="countup" data-parallax="scroll" data-image-src="./img/people-using-smartphones.jpg">
-            <div class="container text-center">
+            <div class="container text-center pb-5">
                 <div class="row">
                     <div class="col-12">
                         <div class="title-block">
@@ -365,7 +365,7 @@
         </section>        
 
         <section class="testimonial">
-                <div class="container">
+                <div class="container pb-5">
                     <div class="row">
                         <div class="title-block">
                             <h2 class="title">Lorem ipsum</h2>
@@ -440,7 +440,7 @@
         </section>
 
         <section class="video" data-parallax="scroll" data-image-src="./img/man-ipad.jpg">
-            <div class="container text-center">
+            <div class="container text-center pb-5">
                 <div class="row">
                     <div class="col-12">
                         <div class="title-block">
@@ -480,7 +480,7 @@
         </section>
 
         <section class="blog">
-            <div class="container">
+            <div class="container pb-5">
                 <div class="row">
                     <div class="col-12">
                         <div class="title-block">
@@ -590,7 +590,7 @@
         </section>
 
         <section class="faq">
-            <div class="container">
+            <div class="container pb-5">
                 <div class="row">
                     <div class="col-12">
                         <div class="title-block">
@@ -688,7 +688,7 @@
         </section>
 
         <section class="contact" data-parallax="scroll" data-image-src="./img/email-computer.jpg">
-            <div class="container">
+            <div class="container pb-5">
                 <div class="row">
                     <div class="col-12">
                         <div class="title-block">
@@ -759,11 +759,30 @@
             </div>
         </section>
 
-        <section class="newsletter"></section>
+        <section class="newsletter">
+            <div class="container">
+                <div class="row p-5">
+                    <div class="col-md-6">
+                        <h2 class="text-left color-primary">Lorem ipsum dolor sit amet</h2>
+                        <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam sint quod repellendus tenetur molestiae!</p>
+                    </div>
+                    <div class="col-md-6">
+                        <form class="pt-2 pt-sm-4 pt-md-5" action="#">
+                            <div class="input-group">
+                                <input type="text" name="subscription-email" id="subscription-email" class="form-control" placeholder="Your E-Mail" aria-label="Your E-Mail" aria-describedby="newsletter subscription">
+                                <div class="input-group-append">
+                                    <button class="btn btn-outline-primary" type="submit">Button</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
-        
+            <p class="text-center text-white p-4 m-0">Designer by <a href="https://www.robsonhrodrigues.com.br/" target="_blank">R. H. Rodrigues</a></p>
     </footer>
 
     <!-- jQuery -->
