--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="title-block">
-                            <h2 class="title color-primary">Lorem ipsum dolor sit amet</h2>
+                            <h2 class="title text-center color-primary">Lorem ipsum dolor sit amet</h2>
                         </div>
                         <!-- /.title-block -->
                     </div>
@@ -128,20 +128,20 @@
                 <div class="row">                        
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <i class="fa fa-paint-brush fa-5x" aria-hidden="true"></i>
-                        <h4>Lorem ipsum dolor</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod</p>
+                        <h4 class="services-title">Lorem ipsum dolor</h4>
+                        <p class="services-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod</p>
                     </div>
                     <!-- /.col -->
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <i class="fa fa-code fa-5x" aria-hidden="true"></i>
-                        <h4>Lorem ipsum dolor</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod</p>
+                        <h4 class="services-title">Lorem ipsum dolor</h4>
+                        <p class="services-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod</p>
                     </div>
                     <!-- /.col -->
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <i class="fa fa-bar-chart fa-5x" aria-hidden="true"></i>
-                        <h4>Lorem ipsum dolor</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod</p>
+                        <h4 class="services-title">Lorem ipsum dolor</h4>
+                        <p class="services-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod</p>
                     </div>
                     <!-- /.col -->
                 </div>
@@ -368,7 +368,7 @@
                 <div class="container pb-5">
                     <div class="row">
                         <div class="title-block">
-                            <h2 class="title">Lorem ipsum</h2>
+                            <h2 class="title text-center">Lorem ipsum</h2>
                             <h3 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
                         </div>
                         <!-- /.title-block -->
@@ -484,7 +484,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="title-block">
-                            <h2 class="title color-primary">Lorem ipsum</h2>
+                            <h2 class="title text-center color-primary">Lorem ipsum</h2>
                             <h3 class="subtitle">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
                             </h3>
@@ -573,7 +573,7 @@
         
         </section>
 
-        <section id="map"></section>
+        <section id="map" class="map"></section>
 
         <section class="calltoaction">
             <div class="d-sm-flex p-4 justify-content-center align-items-center">
@@ -594,7 +594,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="title-block">
-                            <h2 class="title color-primary">Lorem ipsum</h2>
+                            <h2 class="title text-center color-primary">Lorem ipsum</h2>
                             <h3 class="subtitle">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
                             </h3>
@@ -692,7 +692,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="title-block">
-                            <h2 class="title">Lorem ipsum</h2>
+                            <h2 class="title text-center">Lorem ipsum</h2>
                             <h3 class="subtitle">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
                             </h3>
